// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col should be able match snapshot 1`] = `
<div>
  <div
    class=""
  >
    <h1>
      Column 1
    </h1>
  </div>
  <div
    class="Toastify"
  />
</div>
`;

exports[`Grid should be able match snapshot 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(3,1fr);
}

<div>
  <div
    class="c0"
    style="columns: 3;"
  >
    <h1>
      Column 1
    </h1>
    <h1>
      Column 2
    </h1>
    <h1>
      Column 3
    </h1>
  </div>
  <div
    class="Toastify"
  />
</div>
`;

exports[`Row should be able match snapshot 1`] = `
.c2 {
  -webkit-flex: 0 0 25%;
  -ms-flex: 0 0 25%;
  flex: 0 0 25%;
  max-width: 25%;
}

.c3 {
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  row-gap: 24px;
  margin: 0 -12px;
}

.c0 .c1 {
  padding: 0 12px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
      span="6"
    >
      <h1>
        Column 1
      </h1>
    </div>
    <div
      class="c1 c2"
      span="6"
    >
      <h1>
        Column 2
      </h1>
    </div>
    <div
      class="c1 c2"
      span="6"
    >
      <h1>
        Column 3
      </h1>
    </div>
    <div
      class="c1 c2"
      span="6"
    >
      <h1>
        Column 4
      </h1>
    </div>
    <div
      class="c1 c3"
      span="24"
    >
      <h1>
        Column 5
      </h1>
    </div>
  </div>
  <div
    class="Toastify"
  />
</div>
`;

exports[`Space should be able match snapshot 1`] = `
<div>
  <h1
    style="margin: 10rem;"
  >
    Children
  </h1>
  <div
    class="Toastify"
  />
</div>
`;
